force-app/main/default/objects/cgcloud__Asset_Template__c/cgcloud__Asset_Template__c.object-meta.xml
<CustomObject>
    <description>Asset: Physical element with some value
that a manufacturer can place at a
customer(Retailer, Bar, Hotel, Shop, ...)
and it can be associated to a POS (ie.
Shelf, cooler, fridge, ...).</description>
    <label>Asset Template</label>
    <nameField>
        <label>Asset Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>