force-app/main/default/objects/cgcloud__Asset_Template__c/fields/cgcloud__Blind_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Blind_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the customer’s assets are initially displayed or not.

This setting is applicable for mobility devices.</description>
    <inlineHelpText>Defines if the customer’s assets are initially displayed or not.

This setting is applicable for mobility devices.</inlineHelpText>
    <label>Blind Mode</label>
    <type>Checkbox</type>
</CustomField>