force-app/main/default/objects/cgcloud__Asset_Template__c/fields/cgcloud__Location_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
                <default>true</default>
                <label>INT</label>
            </value>
            <value>
                <fullName>STR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>