force-app/main/default/objects/cgcloud__Asset_Template__c/fields/cgcloud__Meta_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Meta_Type__c</fullName>
    <label>Meta Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cooler</fullName>
                <default>true</default>
                <label>Cooler</label>
            </value>
            <value>
                <fullName>DispensingEquipment</fullName>
            </value>
            <value>
                <fullName>Freezer</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>IntangibleAssets</fullName>
            </value>
            <value>
                <fullName>OutdoorEquipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>