force-app/main/default/objects/cgcloud__Asset_Template__c/fields/cgcloud__Scanner_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scanner_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the asset audit has to be executed via scanner.

This setting is applicable for mobility devices.</description>
    <label>Scanner Policy</label>
    <type>Checkbox</type>
</CustomField>