force-app/main/default/objects/cgcloud__Asset_Template__c/fields/cgcloud__Scanning_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scanning_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the asset audit has to be executed via scanner.

This setting is applicable for mobility devices.</description>
    <inlineHelpText>Defines if the asset audit has to be executed via scanner.

This setting is applicable for mobility devices.</inlineHelpText>
    <label>Scanning Required</label>
    <type>Checkbox</type>
</CustomField>